examples/test/testpolicy19171.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19171
  namespace: namespace472
spec:
  podSelector:
    matchLabels:
      key38: value8
      key25: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value4
          key4: value28
          key26: value22
      podSelector:
        matchLabels:
          key49: value38
          key27: value11
